--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginLeft="15dp">
         <Button
             android:layout_gravity="top|center"
             android:id="@+id/bug_button"
@@ -79,12 +80,12 @@
             android:text="已演奏时间"
             android:textSize="20sp"/>
         <Chronometer
-            android:id="@+id/chronometer"
+            android:id="@+id/chronometer_m"
             android:layout_width="70dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginStart="15dp"
-            android:textSize="30sp"/>
+            android:textSize="25sp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -92,23 +93,52 @@
             android:text="演奏进度"
             android:textSize="20sp"/>
         <ProgressBar
-            android:layout_width="wrap_content"
+            android:id="@+id/progress_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            style="@android:style/Widget.Holo.ProgressBar.Large"
+            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
             android:progress="10"
             android:indeterminate="false" />
+        <TextView
+            android:id="@+id/true_number"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="正确次数:0"
+            android:textSize="10sp"/>
+        <TextView
+            android:id="@+id/false_number"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="错误次数:0"
+            android:textSize="10sp"/>
+        <TextView
+            android:id="@+id/true_percent"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="正确率:0"
+            android:textSize="10sp"/>
+        <TextView
+            android:id="@+id/level"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="当前段位:初学弟子"
+            android:textSize="10sp"/>
         <Button
-            android:id="@+id/high"
+            android:id="@+id/button_high"
             android:layout_marginLeft="5dp"
             android:text="高音"
             android:textSize="25sp"
             android:background="@drawable/button_style"
             android:layout_width="90dp"
             android:layout_height="50dp"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="15dp" />
         <Button
-            android:id="@+id/low"
+            android:id="@+id/button_low"
             android:layout_marginLeft="5dp"
             android:text="低音"
             android:textSize="25sp"
